--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,15 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   firebase: ^9.0.3
-  firebase_auth: ^5.6.0
+  firebase_auth: ^5.7.0
   firebase_messaging: ^15.2.7
-  cloud_firestore: ^5.6.9
+  cloud_firestore: ^5.6.12
   printing: ^5.14.2
+  firebase_core: ^3.15.2
+  go_router: ^16.0.0
+  flutter_bloc: ^9.1.1
+  google_fonts: ^4.0.4
+  flutter_svg: ^2.0.9
 
 dev_dependencies:
   flutter_test:
